Adjust the height of the app to avoid having a vertical scrollbar on the log in page

--- a/client/styles/App.css
+++ b/client/styles/App.css
@@ -1,7 +1,7 @@
 .app {
   display: flex;
   flex-direction: column;
-  height: 96vh;
+  height: 95vh;
   padding: 15px;
 }
 
@@ -13,6 +13,7 @@
 
 @media screen and (min-width: 992px) {
   .app {
+    height: 96vh;
     padding: 15px 75px;
   }
   
